# AI

./: .gitignore  CMakeLists.txt  main.cpp  test.py
qt_scatter_charts/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
qtcraetor_charts/: Makefile  qtcraetor_charts  qtcraetor_charts.pro  widget.cpp  widget.ui
